# NJ

./: .eslintrc.json  LiveblocksSetup.js  README.md  liveblocks.config.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
app/: head.tsx  layout.tsx
app/(courses)/: layout.tsx
app/(courses)/[...slug]/: head.tsx  page.tsx
app/(courses)/blog/: page.tsx
app/(courses)/journey/: page.tsx
app/(marketing)/: page.tsx
app/api/liveblocks-auth/: route.ts
components/: article-body.tsx  article.tsx  cm-data.tsx  cm-editor.tsx  connect-wallet.tsx  copy-button.tsx  cursor.tsx  cursors.tsx  editors.tsx  empty-placeholder.tsx  help.tsx  icons.tsx  live-wrapper.tsx  mdx-content.tsx  mint-button.tsx  nj-logo.tsx  presence-counter.tsx  r-editor.tsx
content/blog/: advanced-xcc.md  coin-flip.md  count-near.md  counter-near.md  donation.md  escrow.md  factory.md  guest-book.md  hello-near.md  journey.md  update.md  xcc.md
content/pages/: CareersPage.js  CareersPage.jsx  WaitlistPage.js  careers.js  careers.mdx  features.mdx  near-university.mdx  privacy.mdx  teach-on-near-journey.mdx
content/snippets/: calculator-near.js  count-near-answer.js  journey.js  unorderedmap.js
lib/: store.ts  utils.ts
lib/code/: index.ts  sources.ts
lib/hooks/: near.ts  use-codemirror.ts
lib/mdx/: index.ts  sources.ts
lib/near/: interface.ts  near-wallet.ts  wallet.ts
neardev/: dev-account  dev-account.env
nft/: Cargo.toml
styles/: globals.css
ui/: alert.tsx  avatar.tsx  dropdown.tsx  popover.tsx  toast.tsx
(+5 files in other folders)
