[package]
name = "my_contract"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "1.1.0"  # Specify a version that's compatible with your Rust version
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
schemars = "0.8.15"  # Specify a version that's compatible with your Rust version
wee_alloc = "0.4.5"